// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Aside Aside tabs 1`] = `
<portal>
  <aside
    data-ts="Aside"
    data-ts.busy=""
    data-ts.open={false}
    data-ts.title="Aside demo"
  >
    <div
      data-ts="Panel"
      data-ts.label="tab 0"
    >
      tab 0 content
    </div>
    <div
      data-ts="Panel"
      data-ts.label="tab 1"
    >
      tab 1 content
    </div>
  </aside>
</portal>
`;

exports[`Aside Controlled mode 1`] = `
<portal>
  <aside
    className="aside-class"
    data-ts="Aside"
    data-ts.busy=""
    data-ts.open={false}
    data-ts.title="Aside demo"
  >
    <div
      data-ts="Panel"
    >
      <menu
        data-ts="Menu"
      >
        <li
          className=""
        >
          <button
            disabled={false}
            type="button"
          >
            <span>
              Menu item
            </span>
          </button>
        </li>
      </menu>
    </div>
  </aside>
</portal>
`;

exports[`Footer Add notification badge 1`] = `null`;

exports[`Footer Open collaboration 1`] = `null`;

exports[`Footer Show buttons 1`] = `null`;

exports[`Form Basic structure 1`] = `
<form
  data-ts="Form"
/>
`;

exports[`Form FormSwitch 1`] = `
<form
  data-ts="Form"
>
  <fieldset>
    <span>
      Controlled mode
    </span>
    <label
      htmlFor="switch-one"
    >
      <span>
        Switch one
      </span>
      <input
        checked={true}
        disabled={false}
        id="switch-one"
        name=""
        onChange={[Function]}
        type="checkbox"
      />
    </label>
  </fieldset>
  <fieldset>
    <span>
      Uncontrolled mode
    </span>
    <label
      htmlFor="switch-two"
    >
      <span>
        Switch two
      </span>
      <input
        defaultChecked={true}
        disabled={false}
        id="switch-two"
        name=""
        onChange={[Function]}
        type="checkbox"
      />
    </label>
  </fieldset>
</form>
`;

exports[`Header Change the color 1`] = `null`;

exports[`Header Change the title 1`] = `null`;

exports[`Header Show buttons 1`] = `null`;

exports[`Menu Basic usage 1`] = `
<menu
  data-ts="Menu"
>
  <li
    className="ts-checked"
  >
    <button
      disabled={false}
      type="button"
    >
      <span>
        Menu item 1
      </span>
      <i
        className="ts-icon-checked"
      />
    </button>
  </li>
  <li
    className=""
  >
    <button
      disabled={false}
      type="button"
    >
      <span>
        Menu item 2
      </span>
    </button>
  </li>
</menu>
`;

exports[`Modal Controlled mode 1`] = `
<portal>
  <dialog
    data-ts="Modal"
    data-ts.open={false}
    data-ts.title="Fullscreen Modal demo"
  >
    <div
      data-ts="Panel"
    >
      <main
        data-ts="Main"
      >
        <h1>
          A Modal Example
        </h1>
        <p>
          …
        </p>
        <p>
          <button
            className="ts-primary"
            onClick={[Function]}
            type="submit"
          >
            <span>
              Close the Modal
            </span>
          </button>
        </p>
      </main>
    </div>
  </dialog>
</portal>
`;

exports[`Modal Controlled mode with buttons 1`] = `
<portal>
  <dialog
    data-ts="Modal"
    data-ts.open={false}
    data-ts.title="Fullscreen Modal demo"
  >
    <div
      data-ts="Panel"
    >
      <main
        data-ts="Main"
      >
        <h1>
          A Modal Example
        </h1>
        <p>
          …
        </p>
        <p>
          <button
            className="ts-primary"
            onClick={[Function]}
            type="submit"
          >
            <span>
              Close the Modal
            </span>
          </button>
        </p>
      </main>
    </div>
  </dialog>
</portal>
`;

exports[`Note Basic usage 1`] = `null`;

exports[`SideBar Controlled mode 1`] = `
<portal>
  <aside
    data-ts="SideBar"
    data-ts.busy={undefined}
    data-ts.open={false}
    data-ts.title="SideBar demo"
  >
    <div
      data-ts="Panel"
    >
      <menu
        data-ts="Menu"
      >
        <li
          className=""
        >
          <button
            disabled={false}
          >
            <span>
              Menu item
            </span>
          </button>
        </li>
      </menu>
    </div>
  </aside>
</portal>
`;

exports[`SideBar SideBar tabs 1`] = `
<portal>
  <aside
    data-ts="SideBar"
    data-ts.busy={undefined}
    data-ts.open={false}
    data-ts.title="SideBar demo"
  >
    <div
      data-ts="Panel"
      data-ts.label="tab 0"
    >
      tab 0 content
    </div>
    <div
      data-ts="Panel"
      data-ts.label="tab 1"
    >
      tab 1 content
    </div>
    <div
      data-ts="Panel"
      data-ts.label="tab 2"
    >
      tab 2 content
    </div>
  </aside>
</portal>
`;

exports[`StatusBar (deprecated) Hide bar 1`] = `null`;

exports[`StatusBar (deprecated) Show buttons 1`] = `null`;

exports[`StatusBar (deprecated) Show message 1`] = `null`;

exports[`TsLogo Basic usage 1`] = `
<svg
  className="ts-logo"
  viewBox="0 0 161 109"
>
  <path
    d="M72.5 1h-70C1 1 0 1.6 0 3v18c0 .8.5 1.6 1.4 2 .3 0 .7 0 1 .2H45v83c0 1.3 1 2.2 2.4 2.2h25c1.4 0 2.4-1 2.4-2.2V3c0-1.3-1-2-2.3-2m86 0h-70C87 1 86 1.8 86 3v103.4c0 1.3 1 2 2.4 2h25c1.4 0 2.4-.8 2.4-2v-83h42.6c.4 0 .7 0 1-.2 1-.3 1.4-1 1.4-2v-18c0-1.3-1-2.2-2.3-2.2"
    fillRule="evenodd"
  />
</svg>
`;
